--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
     </style>
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
-    <div class="container mx-auto px-4 py-8">
+    <!-- Christmas Countdown Overlay -->
+    <div id="countdown-overlay" class="hidden fixed top-0 left-0 right-0 z-50 bg-gradient-to-r from-indigo-600 to-indigo-700 shadow-lg border-b-2 border-indigo-800">
+        <div class="container mx-auto px-4 py-4">
+            <div class="text-center">
+                <p class="text-white text-lg md:text-xl font-semibold">
+                    <span id="countdown-text">All puzzles are locked until December 1st!</span>
+                    <span id="countdown-days" class="ml-2 text-indigo-200 font-bold"></span>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mx-auto px-4 py-8" id="main-content">
         <header class="text-center mb-8">
             <h1 class="text-4xl md:text-5xl font-bold text-indigo-900 mb-2">Tile Sum</h1>
             <p class="text-lg text-indigo-900">Christmas Advent Calendar Edition</p>
@@ -39,6 +51,11 @@
                 const indicator = document.getElementById('test-mode-indicator');
                 if (indicator) indicator.classList.remove('hidden');
             }
+            
+            // Update countdown (will hide if not needed)
+            updateCountdown();
+            
+            // Initialize calendar
             initCalendar();
         });
     </script>
