--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         gtag('config', 'G-E4YJ359T9L');
     </script>
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
         @media (prefers-reduced-motion: reduce) {
             * {
