--- a/puzzle.html
+++ b/puzzle.html
@@ -30,7 +30,7 @@
         gtag('config', 'G-E4YJ359T9L');
     </script>
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     <style>
         @media (prefers-reduced-motion: reduce) {
