--- a/puzzle.html
+++ b/puzzle.html
@@ -60,9 +60,8 @@
             background-color: #eef2ff;
         }
         .slot.filled {
-            border-style: solid;
-            border-color: #6366f1;
-            background-color: #eef2ff;
+            border: none;
+            background-color: transparent;
         }
         .tile.locked {
             cursor: not-allowed;
