--- a/puzzle.html
+++ b/puzzle.html
@@ -167,9 +167,17 @@
     <!-- Success Modal -->
     <div id="success-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" role="dialog" aria-modal="true" aria-labelledby="modal-title">
         <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full mx-4">
-            <h2 id="modal-title" class="text-3xl font-bold text-indigo-900 mb-4 text-center">Correct! Well done!</h2>
-            <p class="text-lg text-indigo-900 mb-6 text-center">You solved the puzzle!</p>
-            <div class="flex justify-center">
+            <h2 id="modal-title" class="text-3xl font-bold text-indigo-900 mb-4 text-center">You solved the puzzle!</h2>
+            <div id="share-message-container" class="mb-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
+                <p id="share-message" class="text-sm text-gray-700 whitespace-pre-wrap break-words"></p>
+            </div>
+            <div class="flex justify-center gap-4">
+                <button 
+                    id="share-btn"
+                    class="px-8 py-3 bg-amber-500 text-white font-semibold rounded-lg hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:ring-offset-2 transition-colors"
+                >
+                    Copy
+                </button>
                 <a 
                     href="index.html" 
                     class="px-8 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition-colors"
