enhanced SEO metadata across archive, index, and puzzle pages by adding site name and article author, and updated social media tags for better sharing

--- a/archive.html
+++ b/archive.html
@@ -20,10 +20,12 @@
     <meta property="og:image" content="https://sum-tile.uk/og-image.png">
     <meta property="og:url" content="https://sum-tile.uk/archive.html">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Sum Tile">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Puzzle Archive - Sum Tile">
     <meta name="twitter:description" content="Browse archived puzzles - Play past daily word challenges from the Sum Tile puzzle collection.">
     <meta name="twitter:image" content="https://sum-tile.uk/og-image.png">
+    <meta name="twitter:image:src" content="https://sum-tile.uk/og-image.png">
     
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E4YJ359T9L"></script>
