--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <meta property="og:image" content="https://sum-tile.uk/og-image.png">
     <meta property="og:url" content="https://sum-tile.uk/">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Sum Tile">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Word Game - Advent Puzzle | Daily Word Challenge">
     <meta name="twitter:description" content="Play Christmas word game - Daily word challenge advent puzzle! Scrabble anagram game with festive brain teaser challenges starting Dec 1st.">
     <meta name="twitter:image" content="https://sum-tile.uk/og-image.png">
+    <meta name="twitter:image:src" content="https://sum-tile.uk/og-image.png">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
