--- a/puzzle.html
+++ b/puzzle.html
@@ -19,11 +19,14 @@
     <meta property="og:description" content="Daily word challenge advent puzzle - Scrabble anagram game! Arrange letter tiles to form words in this festive brain teaser." id="og-description">
     <meta property="og:image" content="https://sum-tile.uk/og-image.png" id="og-image">
     <meta property="og:url" content="https://sum-tile.uk/puzzle.html" id="og-url">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="article" id="og-type">
+    <meta property="og:site_name" content="Sum Tile">
+    <meta property="article:author" content="Sum Tile">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Puzzle Day 1 - Christmas Word Game | Advent Puzzle" id="twitter-title">
     <meta name="twitter:description" content="Daily word challenge advent puzzle - Scrabble anagram game! Arrange letter tiles to form words in this festive brain teaser." id="twitter-description">
     <meta name="twitter:image" content="https://sum-tile.uk/og-image.png" id="twitter-image">
+    <meta name="twitter:image:src" content="https://sum-tile.uk/og-image.png" id="twitter-image-src">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json" id="structured-data-webpage">
