Add footer with author credit to archive, index, and puzzle pages; updated padding in styles.css

--- a/index.html
+++ b/index.html
@@ -497,6 +497,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="text-center py-6 text-gray-400 text-xs">
+        © Bobbie Allsop created Dec 2025
+    </footer>
 </body>
 </html>
 
