--- a/puzzle.html
+++ b/puzzle.html
@@ -555,6 +555,10 @@
             }
         }
     </script>
+
+    <footer class="text-center py-6 text-gray-400 text-xs">
+        © Bobbie Allsop created Dec 2025
+    </footer>
 </body>
 </html>
 
