Add play count tracking feature
- Add play-count.js module for tracking and displaying play counts
- Integrate play count tracking with puzzle completion flow
- Add play count display to puzzle pages, daily puzzle, and archive
- Add PLAY_COUNT_SETUP.md with backend implementation guide
- Update README.md with feature documentation

Note: Requires backend API setup (see PLAY_COUNT_SETUP.md) to enable functionality

--- a/index.html
+++ b/index.html
@@ -201,6 +201,16 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-indigo-900 hidden" id="daily-puzzle-title">
                     <!-- Title will be set by JavaScript but hidden -->
                 </h2>
+                
+                <!-- Play Count Display -->
+                <div id="daily-play-count-container" class="mb-4 flex justify-start">
+                    <div class="flex items-center gap-2 text-indigo-700 text-sm md:text-base">
+                        <svg class="w-4 h-4 md:w-5 md:h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path>
+                        </svg>
+                        <span id="daily-play-count-display" aria-label="Number of players">Loading...</span>
+                    </div>
+                </div>
             </header>
 
             <!-- Tiles Container -->
