Update footer links and enhance accessibility tests
- Updated footer links in archive.html, index.html, and puzzle.html to include a clickable portfolio link for Bobbie Allsop, improving user navigation.
- Added comprehensive accessibility tests for footer links in the E2E test suite, ensuring visibility, proper attributes, and keyboard accessibility across multiple pages.
- Refactored modal tests to improve consistency and maintainability, ensuring that share messages and button handlers are correctly set up.

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     </div>
 
     <footer class="text-center py-6 text-gray-400 text-xs">
-        © Bobbie Allsop created Dec 2025
+        © <a href="https://bobbieallsop.co.uk" target="_blank" rel="noopener noreferrer" class="underline hover:text-gray-300 transition-colors">Bobbie Allsop</a> created Dec 2025
     </footer>
 </body>
 </html>
