Update game metadata and enhance tile operation validations
- Changed the alternate name and description in index.html and puzzle.html to better reflect the game's focus on daily word puzzles.
- Improved input validation in tile-operations.js to ensure robust handling of tile and slot interactions, preventing errors when invalid inputs are provided.
- Enhanced unit tests for keyboard interactions and tile operations, ensuring comprehensive coverage and reliability in handling user interactions and game state management.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Sum Tile",
-        "alternateName": "Christmas Word Game - Advent Puzzle",
+        "alternateName": "Daily Word Puzzle Game",
         "url": "https://sum-tile.uk/",
-        "description": "Christmas word game - Daily word challenge advent puzzle! Play Scrabble anagram game with festive brain teaser challenges. Daily word puzzle game where you arrange letter tiles to form words with Scrabble scoring.",
+        "description": "Daily word challenge puzzle! Play Scrabble anagram game with brain teaser challenges. Daily word puzzle game where you arrange letter tiles to form words with Scrabble scoring.",
         "potentialAction": {
             "@type": "SearchAction",
             "target": {
