--- a/puzzle.html
+++ b/puzzle.html
@@ -33,8 +33,8 @@
     {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Puzzle Day 1 - Christmas Word Game | Advent Puzzle",
-        "description": "Daily word challenge advent puzzle - Scrabble anagram game! Arrange letter tiles to form words in this Christmas word game festive brain teaser.",
+        "name": "Puzzle Day 1 - Daily Word Puzzle",
+        "description": "Daily word challenge puzzle - Scrabble anagram game! Arrange letter tiles to form words in this word puzzle brain teaser.",
         "url": "https://sum-tile.uk/puzzle.html?day=1",
         "breadcrumb": {
             "@type": "BreadcrumbList",
