Refactor layout and styling for improved consistency and accessibility
- Updated button styles and dimensions in archive.html, index.html, and puzzle.html for a more cohesive user interface.
- Adjusted tile and score display sizes for better visual alignment across all pages.
- Enhanced layout structure by introducing flex properties and centering wrappers to improve accessibility and usability.
- Modified CSS classes to support new layout changes, ensuring a consistent look and feel throughout the application.

--- a/archive.html
+++ b/archive.html
@@ -133,18 +133,14 @@
                 <a href="index.html" class="text-text-primary hover:opacity-80 font-semibold">
                     ← Back to Home
                 </a>
-                <a href="index.html" class="text-text-primary hover:opacity-80 font-semibold">
-                    Today's Puzzle →
-                </a>
             </nav>
-            <h1 class="text-3xl md:text-4xl font-bold text-text-primary mb-2" style="font-size: 48px; line-height: 60px;">Puzzle Archive</h1>
             <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-700 font-semibold"></p>
         </header>
 
         <!-- Date Picker -->
-        <div class="mb-8 bg-white rounded-lg shadow-md p-6">
-            <label for="date-picker" class="block text-center text-sm font-semibold text-text-primary mb-3">
-                Select puzzle date
+        <div class="mb-8">
+            <label for="date-picker" class="block text-center font-semibold text-text-primary mb-3" style="font-size: 48px; line-height: 60px;">
+                Puzzle Date
             </label>
             <div class="flex items-center justify-center gap-4">
                 <button 
@@ -160,7 +156,7 @@
                     type="date" 
                     id="date-picker"
                     class="px-4 py-2 border-2 border-slot-border rounded-lg text-lg font-semibold text-text-primary focus:outline-none focus:ring-2 focus:ring-text-primary focus:border-slot-border"
-                    aria-label="Select puzzle date"
+                    aria-label="Puzzle Date"
                 />
                 <button 
                     id="date-next-btn"
