Enhance tile navigation and accessibility across keyboard interactions
- Updated keyboard input handling to allow seamless navigation between both placed and unplaced tiles, improving user experience.
- Refactored functions to ensure consistent focus management when tiles are deselected or placed in slots.
- Adjusted styles for test mode indicators to enhance visibility and consistency across archive.html, index.html, and puzzle.html.
- Introduced new CSS rules for large screen backgrounds, ensuring proper layering and visibility of decorative elements.

--- a/archive.html
+++ b/archive.html
@@ -122,19 +122,19 @@
         }
     </style>
 </head>
-<body class="bg-bg-primary min-h-screen font-rem">
+<body class="bg-bg-primary min-h-screen font-rem flex flex-col">
     <!-- Skip to main content link -->
     <a href="#main-content" class="sr-only focus:w-auto focus:h-auto focus:p-4 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:border-0 focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:bg-hint focus:text-white focus:rounded-lg focus:outline-none focus:ring-2 focus:ring-hint focus:ring-offset-2">
         Skip to main content
     </a>
-    <main class="container mx-auto px-4 py-8 max-w-4xl" id="main-content">
+    <main class="container mx-auto px-4 py-8 max-w-4xl flex-1 flex flex-col justify-center" id="main-content">
         <header class="mb-8">
             <nav class="flex items-center justify-between mb-4" aria-label="Page navigation">
                 <a href="index.html" class="text-text-primary hover:opacity-80 font-semibold">
                     ← Back to Home
                 </a>
             </nav>
-            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-700 font-semibold"></p>
+            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-900 font-semibold"></p>
         </header>
 
         <!-- Date Picker -->
