--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                     ?
                 </button>
             </div>
-            <h1 class="text-4xl md:text-5xl font-bold text-text-primary mb-2" style="font-size: 48px; line-height: 60px;">Sum Tile</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-text-primary mb-2 inline-block bg-bg-primary px-4 py-2" style="font-size: 48px; line-height: 60px;">Sum Tile</h1>
             <p class="text-lg text-text-primary hidden" id="header-subtitle" style="font-size: 16px; line-height: 20px;"></p>
-            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-700 font-semibold"></p>
+            <p id="test-mode-indicator" class="hidden mt-2 text-sm text-orange-900 font-semibold"></p>
         </header>
 
         <!-- Advent Calendar View (shown before Dec 26) -->
